--- a/dox/cctbx_notations.sty
+++ b/dox/cctbx_notations.sty
@@ -1,9 +1,6 @@
 % authors credentials
 \newcommand{\lucjbourhis}{Luc J. Bourhis\\(University of Durham, UK)}
 
-% references
-\newcommand{\refeq}[1]{eq.~(\ref{#1})}
-
 % programming
 \newcommand{\code}[1]{\texttt{#1}}
 \newcommand{\cctbx}{\code{cctbx}}
@@ -14,3 +11,11 @@
 \newcommand{\sym}[2]{\left( #1\,\vert\, #2 \right)}
 \newcommand{\cov}[2]{\mathrm{Cov}\left(#1,#2\right)}
 \newcommand{\fourier}[1]{\mathrm{FFT}\left[#1\right]}
+\newcommand{\kernel}{\operatorname{Ker}}
+\newcommand{\image}{\operatorname{Im}}
+\newcommand{\dimension}{\operatorname{dim}}
+\newcommand{\scalarprod}[2]{#1 \cdot #2}
+\newcommand{\argmin}{\mathop{\mathrm{argmin}}\displaylimits}
+\newcommand{\partialder}[2]{\frac{\partial #1}{\partial #2}}
+\newcommand{\partialderxx}[2]{\frac{\partial^2 #1}{\partial #2^2}}
+\newcommand{\partialderxy}[3]{\frac{\partial^2 #1}{\partial #2 \partial #3}}
