--- a/dox/cctbx_preamble.sty
+++ b/dox/cctbx_preamble.sty
@@ -1,3 +1,13 @@
+\usepackage{refstyle}
+\newref{eqn}{%
+name={eqn~},
+names={eqns~},
+Name={Eqn~},
+Names={Eqns~},
+rngtxt={\ to~},
+lsttxt={\ and~},
+refcmd=(\ref{#1})
+}
 \usepackage{geometry}
 \geometry{a4paper}
 \usepackage{amsmath}
