--- a/cctbx/translation_search/notes.tex
+++ b/cctbx/translation_search/notes.tex
@@ -70,7 +70,7 @@ Then $C(x)$ can be expressed with the following 3 sums (those are equations (13)
 
 \begin{equation}
 \mean{I_x} = \frac{1}{\sum_h m(h)}\sum_h m(h) \sum_{\sym{R_1}{t_1}} \sum_{\sym{R_2}{t_2}} f^{\sym{R_1}{t_1}}(h) {f^{\sym{R_2}{t_2}}(h)}^* e^{i2\pi h^T (R_1 - R_2)x} 
-\label{meanIx}
+\label{eqn:meanIx}
 \end{equation}
 
 \begin{equation}
@@ -78,15 +78,15 @@ Then $C(x)$ can be expressed with the following 3 sums (those are equations (13)
 \mean{I_x^2} = \frac{1}{\sum_h m(h)}&\sum_h m(h) \sum_{\sym{R_1}{t_1}} \sum_{\sym{R_2}{t_2}} \sum_{\sym{R_3}{t_3}} \sum_{\sym{R_4}{t_4}} \\
 &f^{\sym{R_1}{t_1}}(h) {f^{\sym{R_2}{t_2}}(h)}^* f^{\sym{R_3}{t_3}}(h) {f^{\sym{R_4}{t_4}}(h)}^* e^{i2\pi h^T (R_1 - R_2 + R_3 - R_4)x}
 \end{split}
-\label{meanIxsq}
+\label{eqn:meanIxsq}
 \end{equation}
 
 \begin{equation}
 \mean{I_x I_o} = \frac{1}{\sum_h m(h)}\sum_h m(h)  I_o(h) \sum_{\sym{R_1}{t_1}} \sum_{\sym{R_2}{t_2}} f^{\sym{R_1}{t_1}}(h) {f^{\sym{R_2}{t_2}}(h)}^* e^{i2\pi h^T (R_1 - R_2)x}
-\label{meanIxIo}
+\label{eqn:meanIxIo}
 \end{equation}
 
-All those sums are over a discrete set of miller indices and they can therefore be computed by FFT. It should also be noted that~(\ref{meanIx}) and~(\ref{meanIxIo}) involve the same sums with different weights, a fact that is reflected in the cctbx code by handling those two cases with the same code (c.f. class \code{fast\_terms} in \code{cctbx/translation\_search/fast\_terms.h}). As noted by~\cite{J.Navaza:1995}, the fact those those quantities can be computed as FFT's result from choosing $F^2$ instead of $F$ in the least-squares target $Q$. Had we used the latter, we would have to deal with $\mean{|F_x|}$, which is is not a discrete trigonometric sum, thus ending up with a correlation coefficient which cannot be computed by FFT.
+All those sums are over a discrete set of miller indices and they can therefore be computed by FFT. It should also be noted that \eqnref{meanIx,meanIxIo} involve the same sums with different weights, a fact that is reflected in the cctbx code by handling those two cases with the same code (c.f. class \code{fast\_terms} in \code{cctbx/translation\_search/fast\_terms.h}). As noted by~\cite{J.Navaza:1995}, the fact those those quantities can be computed as FFT's result from choosing $F^2$ instead of $F$ in the least-squares target $Q$. Had we used the latter, we would have to deal with $\mean{|F_x|}$, which is is not a discrete trigonometric sum, thus ending up with a correlation coefficient which cannot be computed by FFT.
 
 If we know the space group, the set of symmetries can be taken as the space-group. The procedure is then only used to find the origin shift $x$. If we do not know the space-group, we can compute $C(x)$ for a set reduced to the identity and a symmetry element we want to test, and do that for all symmetry operators we wish to test.
 
